--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乐途旅行</title>
-    <link rel="stylesheet" href="../static/css/home/home.css">
-    <link rel="stylesheet" href="../static/css/basic.css">
+    {% load static %}
+    <link rel="stylesheet" href=".{% static '/css/home/home.css' %}">
+    <link rel="stylesheet" href="{% static '/css/basic.css' %}">
 </head>
-<script src="../static/js/jquery.js"></script>
-<script src="../static/js/home/home_banner.js"></script>
+<script src="{% static 'js/jquery.js' %}"></script>
+<script src=".{% static 'js/home/home_banner.js' %}"></script>
 <!-- <script src="../travel/js/login.js"></script> -->
 
 <body>
@@ -18,7 +19,7 @@
         <div id="cart">
             <b>
                 <ul>
-                    <li class="home"><a href="./html/login.html">我的乐途</a>
+                    <li class="home"><a href="../templates/index.html">我的乐途</a>
                         <ol class='info1'>
                             <li><a href="javascript:void(0)">用户名</a></li>
                             <li><a href="./html/topUp.html">我的钱包</a></li>
@@ -49,7 +50,7 @@
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li class="active"><a href="../travel/index.html">首页</a></li>
+                    <li class="active"><a href="../templates/index.html">首页</a></li>
                     <li><a href="html/information.html">景点门票</a></li>
                     <li><a href="html/order.html">交通出行</a></li>
                     <li><a href="html/order_hotel.html">酒店预定</a></li>
@@ -61,22 +62,22 @@
     <div id="search">
         <div id="imgd">
             <a href="../travel/html/dayanta.html" id="src1">
-                <img src="img/home_banner/banner01.jpg">
+                <img src="../static/images/home/banner01.jpg">
             </a>
             <a href="../travel/html/zhonglou.html">
-                <img src="img/home_banner/banner02.jpg">
+                <img src="../static/images/home/banner02.jpg">
             </a>
             <a href="../travel/html/datangfurongyuan.html">
-                <img src="img/home_banner/banner03.jpg">
+                <img src="../static/images/home/banner03.jpg">
             </a>
             <a href="../travel/html/bingmayong.html">
-                <img src="img/home_banner/banner04.jpg">
+                <img src="../static/images/home/banner04.jpg">
             </a>
             <a href="../travel/html/huashan.html">
-                <img src="img/home_banner/banner06.jpg">
+                <img src="../static/images/home/banner05.jpg">
             </a>
             <a href="../travel/html/zhonglou.html">
-                <img src="img/home_banner/banner08.jpg">
+                <img src="../static/images/home/banner06.jpg">
             </a>
             <ul>
                 <li></li>
@@ -96,13 +97,13 @@
 
             <div id="search2">
                 <input type="text" name="" placeholder="请输入关键字，景点，机票，酒店信息...">
-                <img src="./img/home_banner/search1.png">
+                <img src="../static/images/home/search1.png">
             </div>
             <p>国内旅游、国外旅游、自助旅游、自驾旅游、油轮签证、主题旅游等各种最新热门旅游推荐</p>
         </section>
         <figure>
             <a href="">
-                <img src="./img/home/tour1.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour1.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;西安城墙&gt;</strong>是中国现存规模最大、保存最完整的古代城垣，是第一批全国重点文物保护单位、国家AAAAA级旅游景区 。
             </figcaption>
@@ -114,7 +115,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour2.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour2.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;骊山 &gt;</strong>
                 骊山位于陕西省西安市临潼区城南,因景色翠秀，美如锦绣，故又名“绣岭”。每当夕阳西下，骊山辉映在金色的晚霞之中，景色格外绮丽，有“骊山晚照”之美誉。</figcaption>
@@ -126,7 +127,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour3.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour3.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;大明宫 &gt;</strong> 大明宫，大唐帝国的大朝正宫，唐朝的政治中心和国家象征
                 。始建于唐太宗贞观八年（634年），原名永安宫，是唐长安城三座主要宫殿“三大内”（大明宫、太极宫、兴庆宫）中规模最大的一座，称为“东内”。</figcaption>
@@ -138,7 +139,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour4.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour4.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;乐华欢乐世界&gt;</strong>
                 乐华欢乐世界是亚洲超大主题乐园，为国家AAAA级旅游景区,园区有欢乐广场、月光湖、巨石山脉、繁星林地、回音山谷、熊猫农场6大主题区域，拥有8台不同类型的主题过山车及翻江倒海、高空飞翔、星际飞艇、雷神之锤等33组动感刺激的游乐设备。
@@ -152,7 +153,7 @@
 
         <figure>
             <a href="">
-                <img src="./img/home/tour5.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour5.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;唐华清宫&gt;</strong>
                 唐华清宫，是唐代封建帝王游幸的别宫。后也称“华清池”，位于陕西省西安市临潼区。包括原骊山国家森林公园，与颐和园、圆明园、承德避暑山庄并称为中国四大皇家园林。</figcaption>
@@ -164,7 +165,7 @@
         </figure>
         <figure>
             <a href="../travel/html/ticket.html">
-                <img src="./img/home/tour6.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour6.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;西安秦岭野生动物园&gt;</strong> 西北首家野生动物园，有兽类、鸟类、两栖类和爬行类动物，其庞大的动物种群、数量都是西北之最。
             </figcaption>
@@ -176,7 +177,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour7.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour7.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;长恨歌&gt;</strong>
                 中国首部大型实景历史舞剧，以白居易传世名篇《长恨歌》为蓝本，将历史故事与实景演出相结合，重现1300多年前华清宫里那段感人肺腑的李杨爱情故事。</figcaption>
@@ -188,7 +189,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour8.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour8.jpg" alt="热门旅游">
             </a>
             <figcaption><strong
                     class="title">&lt;回民街&gt;</strong>西安回民街是西安著名的美食文化街区，是西安小吃街区。西安风情的代表之一，是回民街区多条街道的统称，由北广济街、北院门、西羊市、大皮院、化觉巷、洒金桥等数条街道组成，在钟鼓楼后。
@@ -201,7 +202,7 @@
         </figure>
         <figure>
             <a href="">
-                <img src="./img/home/tour9.jpg" alt="热门旅游">
+                <img src="../static/images/home/tour9.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;VR虚拟现实体验馆&gt;</strong> 拟真CS类VR对战射击游戏，拥有真正的身临其境之感。雁塔区长安中路215号小寨西旅国际中心
             </figcaption>
@@ -249,3 +250,4 @@
 </body>
 
 </html>
+?: (urls.W005) URL namespace 'admin' isn't unique. You may not be able to reverse all URLs in this namespace
