--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -11,7 +11,6 @@
 </head>
 <script src="../static/js/jquery.js"></script>
 <script src="../static/js/home/home_banner.js"></script>
-<!-- <script src="../travel/js/login.js"></script> -->
 
 <body>
     <header id="header">
@@ -33,12 +32,12 @@
             
             <b>
                 <div id="register">
-                    <a href="../travel/html/register.html">免费注册</a>
+                    <a href="user/register.html">免费注册</a>
                 </div>
             </b>
             <b>
                 <div id="login">
-                    <a href="../travel/html/login.html">您好,请登录</a>
+                    <a href="user/login.html">您好,请登录</a>
                 </div>
             </b>
         </div>
@@ -49,7 +48,7 @@
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li class="active"><a href="../travel/index.html">首页</a></li>
+                    <li class="active"><a href="index.html">首页</a></li>
                     <li><a href="html/information.html">景点门票</a></li>
                     <li><a href="html/order.html">交通出行</a></li>
                     <li><a href="html/order_hotel.html">酒店预定</a></li>
