--- a/Travel/templates/user/login.html
+++ b/Travel/templates/user/login.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>欢迎登录</title>
-    <link rel="stylesheet" href="../../static/css/basic.css" type="text/css">
-    <link rel="stylesheet" href="../../static/css/user/login.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/basic.css" type="text/css">
+    <link rel="stylesheet" href="/static/css/user/login.css" type="text/css">
 </head>
 <body>
     <div id="top">
         <a href="../index.html">
-            <img src="../../static/images/user/logo.png" alt="logo">
+            <img src="/static/images/user/logo.png" alt="logo">
         </a>
         <span>欢迎登录</span>
         <a href="../index.html"><span class="s1">返回首页</span></a>
@@ -25,14 +25,14 @@
                 </p>
                 <div class="text">
                     <input type="text" name="uname" placeholder="请输入用户名(5~15个字母或数字)" minlength="5" maxlength="15">
-                    <img src="../../static/images/user/user.png" alt="">
+                    <img src="/static/images/user/user.png" alt="">
                 </div>
                 <div class="text pwd">
                     <input type="password" name="upwd" placeholder="请输入密码">
-                    <img src="../../static/images/user/password.png" alt="">
+                    <img src="/static/images/user/password.png" alt="">
                 </div>
                 <div class="validateCode">
-                        <img src="../../static/images/user/logo.png" alt="验证码">
+                        <img src="/static/images/user/logo.png" alt="验证码">
                         <input type="text" name="validateCode" placeholder="验证码输入">
                     </div>
                 <div class="savePwd">
@@ -45,14 +45,14 @@
     </div>
     <div id="bottom">
         <a href="../index.html">
-            <img src="../../static/images/user/logo.png" alt="logo" id="logoImg">
+            <img src="/static/images/user/logo.png" alt="logo" id="logoImg">
         </a>
         <p>
-            <img src="../../static/images/user/letufont.png" alt="" id="fontImg">
+            <img src="/static/images/user/letufont.png" alt="" id="fontImg">
         </p>
         <div class="img">
             <div id="imgs">
-                <img src="../../static/images/user/erweima.jpg" alt="" width="124px;">
+                <img src="/static/images/user/erweima.jpg" alt="" width="124px;">
             </div>
         </div>
 
