--- a/Travel/static/css/user/login.css
+++ b/Travel/static/css/user/login.css
@@ -35,7 +35,7 @@ body{
 #mian{
     width: 100%;
     height: 560px;
-    background-image: url(../../images/user/regist.jpg);
+    background-image: url(/static/images/user/regist.jpg);
     background-size: cover;
 }
 #mian form{
