--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -7,21 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乐途旅行</title>
     {% load static %}
-    <link rel="stylesheet" href=".{% static '/css/home/home.css' %}">
-    <link rel="stylesheet" href="{% static '/css/basic.css' %}">
+    <link rel="stylesheet" href="../static/css/home/home.css">
+    <link rel="stylesheet" href="../static/css/basic.css">
 </head>
-<script src="{% static 'js/jquery.js' %}"></script>
-<script src=".{% static 'js/home/home_banner.js' %}"></script>
-<!-- <script src="../travel/js/login.js"></script> -->
+<script src="../static/js/jquery.js"></script>
+<script src="../static/js/home/home_banner.js"></script>
 
 <body>
     <header id="header">
+        {% if uname %}
         <div id="cart">
             <b>
                 <ul>
-                    <li class="home"><a href="../templates/index.html">我的乐途</a>
+                    <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
-                            <li><a href="javascript:void(0)">用户名</a></li>
+                            <li><a href="javascript:void(0)">我的乐途</a></li>
                             <li><a href="./html/topUp.html">我的钱包</a></li>
                             <li><a href="./html/booking.html">我的订单</a></li>
                             <li><a href="#">退出登录</a></li>
@@ -30,8 +30,9 @@
                 </ul>
             </b>
         </div>
+        {% else %}
         <div class="login">
-            
+        
             <b>
                 <div id="register">
                     <a href="user/register.html">免费注册</a>
@@ -43,6 +44,9 @@
                 </div>
             </b>
         </div>
+        {% endif %}
+        
+        
         <div class="center">
             <h1 class="logo">
                 <a href="index.html" id="logoA">乐途旅行网</a>
@@ -74,7 +78,7 @@
                 <img src="../static/images/home/banner04.jpg">
             </a>
             <a href="../travel/html/huashan.html">
-                <img src="../static/images/home/banner05.jpg">
+                <img src{{uname}}="../static/images/home/banner05.jpg">
             </a>
             <a href="../travel/html/zhonglou.html">
                 <img src="../static/images/home/banner06.jpg">
