--- a/Travel/templates/user/register.html
+++ b/Travel/templates/user/register.html
@@ -17,7 +17,7 @@
         <a href="../index.html"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
-        <form action="">
+        <form action="/index" method="post">
             <div class="content">
                 <p>
                     注册
@@ -28,7 +28,7 @@
                     <img src="/static/images/user/user.png" alt="">
                 </div>
                 <div class="text pwd">
-                    <input type="password" name="upwd" placeholder="请输入密码">
+                    <input type="password" name="upwd" placeholder="请输入密码(5~15个字母或数字)" maxlength="15">
                     <img src="/static/images/user/password.png" alt="">
                 </div>
                 <div class="text phon">
