--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -78,7 +78,7 @@
                 <img src="../static/images/home/banner04.jpg">
             </a>
             <a href="../travel/html/huashan.html">
-                <img src{{uname}}="../static/images/home/banner05.jpg">
+                <img src="../static/images/home/banner05.jpg">
             </a>
             <a href="../travel/html/zhonglou.html">
                 <img src="../static/images/home/banner06.jpg">
