--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -21,7 +21,6 @@
                 <ul>
                     <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
-                            <li><a href="javascript:void(0)">我的乐途</a></li>
                             <li><a href="./html/topUp.html">我的钱包</a></li>
                             <li><a href="./html/booking.html">我的订单</a></li>
                             <li><a href="#">退出登录</a></li>
@@ -49,12 +48,12 @@
         
         <div class="center">
             <h1 class="logo">
-                <a href="index.html" id="logoA">乐途旅行网</a>
+                <a href="javascript:void(0)" id="logoA">乐途旅行网</a>
             </h1>
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li class="active"><a href="../templates/index.html">首页</a></li>
+                    <li class="active"><a href="javascript:void(0)">首页</a></li>
                     <li><a href="html/information.html">景点门票</a></li>
                     <li><a href="html/order.html">交通出行</a></li>
                     <li><a href="html/order_hotel.html">酒店预定</a></li>
