--- a/Travel/templates/hotel/hotel_ticket.html
+++ b/Travel/templates/hotel/hotel_ticket.html
@@ -52,20 +52,21 @@
         <!-- <div class="imgs">
             <img src="../img/info/qinlingdongwuyuan.jpg" alt="图片加载中">
         </div> -->
+        <div><b>{{ hotel_name }}</b></div>
         <div id="content">
             <div id="view">
-                <img src="../img/hohel_ticket/fulixierdun/1.jpg" alt="Nature1" />
-                <img src="../img/hohel_ticket/fulixierdun/2.png" alt="Nature2" />
-                <img src="../img/hohel_ticket/fulixierdun/3.png" alt="Nature3" />
-                <img src="../img/hohel_ticket/fulixierdun/4.png" alt="Nature4" />
-                <img src="../img/hohel_ticket/fulixierdun/5.png" alt="Nature5" />
+                <img src="{{ hotel_p11 }}" alt="Nature1" />
+                <img src="{{ hotel_p12 }}" alt="Nature2" />
+                <img src="{{ hotel_p13 }}" alt="Nature3" />
+                <img src="{{ hotel_p14 }}" alt="Nature4" />
+                <img src="{{ hotel_p15 }}" alt="Nature5" />
             </div>
             <div id="pics-thumbs">
-                    <img src="../img/hohel_ticket/fulixierdun/1.jpg" alt="Nature1" />
-                    <img src="../img/hohel_ticket/fulixierdun/2.png" alt="Nature2" />
-                    <img src="../img/hohel_ticket/fulixierdun/3.png" alt="Nature3" />
-                    <img src="../img/hohel_ticket/fulixierdun/4.png" alt="Nature4" />
-                    <img src="../img/hohel_ticket/fulixierdun/5.png" alt="Nature5" />             
+                    <img src="{{ hotel_p11 }}" alt="Nature1" />
+                    <img src="{{ hotel_p12 }}" alt="Nature2" />
+                    <img src="{{ hotel_p13 }}" alt="Nature3" />
+                    <img src="{{ hotel_p14 }}" alt="Nature4" />
+                    <img src="{{ hotel_p15 }}" alt="Nature5" />
             </div>
         </div>
         <div class="sDetails">
@@ -75,21 +76,21 @@
 
            </div  >
            <div class="hotel_info">2011年装修 2011年开业
-           <br>电话：029-87388888
-           <br>地址：新城区东新街199号（近民乐园）
+               <br>电话：{{phone}}{#029-87388888#}
+               <br>地址：{{address}}{#新城区东新街199号（近民乐园）#}
             </div>
            <div class="hotel_info">
                <div class="wifi">
-                   <img src="../img/hohel_ticket/wifi.png">无线上网
+                   <img src="../../static/images/hotel/wifi.png">无线上网
                </div>
                <div class="wifi">
-                   <img src="../img/hohel_ticket/computer.png">有线上网
+                   <img src="../../static/images/hotel/computer.png">有线上网
                </div>
                <div class="wifi">
-                   <img src="../img/hohel_ticket/p.png">收费停车
+                   <img src="../../static/images/hotel/p.png">收费停车
                </div>
                <div class="wifi">
-                   <img src="../img/hohel_ticket/canting.png">餐厅
+                   <img src="../../static/images/hotel/canting.png">餐厅
                </div>
            </div>
         </div>
@@ -119,7 +120,7 @@
             <!--顶部工具栏-->
             <div class="type">
                 <div class="check">
-                    <img src="../img/cart/product_normal.png" class="checkAll">
+{#                    <img src="../img/cart/product_normal.png" class="checkAll">#}
                     全选
                 </div>
                 <!-- <div class=gper>人员</div> -->
@@ -134,15 +135,15 @@
                 <!--购票信息-->
                 <div class="item">
                     <div class="check">
-                        <img src="../img/cart/product_normal.png" class="checkItem">
+{#                        <img src="../img/cart/product_normal.png" class="checkItem">#}
                         
                     </div>
                     <div class="gname">
-                        <img src="../img/hohel_ticket/fulixierdun/f1.jpg">
-                        <p><b>希尔顿大床房</b></p>
-                        <p>窗户  有</p>
-                        <p>面积  43㎡</p>
-                        <p>床型  大床1.8×2.0米1张</p>
+                        <img src="{#../img/hohel_ticket/fulixierdun/f1.jpg#}{{ room1_p }}">
+                        <p><b>{# 希尔顿大床房 #}{{ room1_name }}</b></p>
+                        <p>{#窗户  有#}{{ room1_window }}</p>
+                        <p>{#面积  43㎡#}{{ room1_area }}</p>
+                        <p>{#床型  大床1.8×2.0米1张#}{{room1_bed  }}</p>
                     </div>
                     <div class=gpt>
                         <p>入住时间：<input type="text" id="from_date1" name="" placeholder="请选择入住日期"></p>
@@ -150,7 +151,7 @@
                     </div>
                     <div class="gprice">
                         <h3>乐涂专享价</h3>
-                        <p>￥ 977.00</p>
+                        <p>￥ {#977.00#}{{ room1_price }}</p>
                     </div>
                     <div class="gcount">
                         <!--阻止超链接默认事件-->
@@ -164,15 +165,15 @@
                 </div>
                  <div class="item">
                     <div class="check">
-                        <img src="../img/cart/product_normal.png" class="checkItem">
+                        <img src="{#  ../img/cart/product_normal.png#}" class="checkItem">
                         
                     </div>
                     <div class="gname">
-                        <img src="../img/hohel_ticket/fulixierdun/f2.jpg">
-                        <p><b>希尔顿双床客房</b></p>
-                        <p>窗户  有</p>
-                        <p>面积  43㎡</p>
-                        <p>床型  大床1.5×1.8米2张</p>
+                        <img src="{#../img/hohel_ticket/fulixierdun/f2.jpg#}{{ room2_p }}">
+                        <p><b>{#希尔顿双床客房#}{{ room2_name }}</b></p>
+                        <p>{#  窗户  有#}{{ room2_window }}</p>
+                        <p>{#面积  43㎡#}{{ room2_area }}</p>
+                        <p>{#床型  大床1.5×1.8米2张#}{{ room2_bed }}</p>
                     </div>
                     <div class=gpt>
                         <p>入住时间：<input type="text" id="from_date2" name="" placeholder="请选择入住日期"></p>
@@ -180,7 +181,7 @@
                     </div>
                     <div class="gprice">
                         <h3>乐涂专享价</h3>
-                        <p>￥ 997.00</p>
+                        <p>￥ {#997.00#}{{ room2_price }}</p>
                     </div>
                     <div class="gcount">
                         <!--阻止超链接默认事件-->
@@ -198,11 +199,11 @@
                         
                     </div>
                     <div class="gname">
-                        <img src="../img/hohel_ticket/fulixierdun/f3.jpg">
-                        <p><b>希尔顿豪华套房</b></p>
-                        <p>窗户  有</p>
-                        <p>面积  50㎡</p>
-                        <p>床型  大床1.8×2.0米1张</p>
+                        <img src="{#../img/hohel_ticket/fulixierdun/f3.jpg#}{{ room3_p }}">
+                        <p><b>{#希尔顿豪华套房#}{{ room3_name }}</b></p>
+                        <p>{#窗户  有#}{{ room3_window }}</p>
+                        <p>{#面积  50㎡#}{{ room3_area }}</p>
+                        <p>{#床型  大床1.8×2.0米1张#}{{ room3_bed }}</p>
                     </div>
                     <div class=gpt>
                         <p>入住时间：<input type="text" id="from_date3" name="" placeholder="请选择入住日期"></p>
@@ -210,7 +211,7 @@
                     </div>
                     <div class="gprice">
                         <h3>乐涂专享价</h3>
-                        <p>￥ 1196.00</p>
+                        <p>￥ {#1196.00#}{{ room3_price }}</p>
                     </div>
                     <div class="gcount">
                         <!--阻止超链接默认事件-->
@@ -233,9 +234,10 @@
         </div>
         <div class="produce_con">
         
-            <p><b>联系方式:</b>029-87388888</p>
+            <p><b>联系方式:</b>{{ phone }}</p>
             <p><b>酒店信息:</b>2011年装修2011年开业</p>
-            <p><b>酒店简介:</b>西安富力希尔顿酒店坐落于古城西安市中心，周边繁华购物区林立，是商务出行和休闲度假的理想之选。步行即可到达闻名于世的明城墙和西安地标建筑钟楼。乘坐出租车仅需5分钟即可到达东大街、骡马市步行街及回民街，这里有西安特色的餐厅、购物及娱乐场所。 拥有城中稀缺宽敞大容量客房，西安富力希尔顿酒店客房面积均大于43平方米。酒店高雅的客房别出心裁将唐朝元素融入其中，并突出了房间的温馨舒适。所有客房均配备高速宽带无线上网及高水准的客用品。 西安富力希尔顿酒店将成为您在西安的会议和用餐新选择。三间风格各异的餐厅及酒吧、一间1200平方米的大宴会厅及6间多功能厅可为您提供多种规模的会议及宴会需求。</p>
+            <p><b>酒店简介:</b>{{ infor }}{#  西安富力希尔顿酒店坐落于古城西安市中心，周边繁华购物区林立，是商务出行和休闲度假的理想之选。步行即可到达闻名于世的明城墙和西安地标建筑钟楼。乘坐出租车仅需5分钟即可到达东大街、骡马市步行街及回民街，这里有西安特色的餐厅、购物及娱乐场所。 拥有城中稀缺宽敞大容量客房，西安富力希尔顿酒店客房面积均大于43平方米。酒店高雅的客房别出心裁将唐朝元素融入其中，并突出了房间的温馨舒适。所有客房均配备高速宽带无线上网及高水准的客用品。 西安富力希尔顿酒店将成为您在西安的会议和用餐新选择。三间风格各异的餐厅及酒吧、一间1200平方米的大宴会厅及6间多功能厅可为您提供多种规模的会议及宴会需求。#}
+            </p>
             <p><b>酒店政策:</b>入住时间: 15:00以后 离店时间: 12:00之前</p>
         </div>
         <div id="JTZN">
@@ -280,7 +282,7 @@
         </div>
         <div class="bottom">
             <p>Copyright ©LT 乐途旅行网 | 陕ICP备120110109号 | 旅行网经营许可证： L-LT-BK12345</p>
-            <img src="../img/booking/pic.gif" title="站长统计">
+            <img src="../../static/images/hotel/pic.gif" title="站长统计">
         </div>
     </footer>
 </body>
