--- a/Travel/templates/hotel/order_hotel.html
+++ b/Travel/templates/hotel/order_hotel.html
@@ -7,12 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OrderHotel</title>
     <link rel="stylesheet" href="../../static/css/hotel/information.css">
-    <link rel="stylesheet" href="../../static/css/hotel/basic.css">
+    <link rel="stylesheet" href="../../static/css/basic.css">
     <link rel="stylesheet" href="../../static/css/hotel/order_hotel.css">
     <script type="text/javascript" src='../../static/js/hotel/jquery.js'></script>
     <script type="text/javascript" src='../../static/js/hotel/order_hotel.js'></script>
     <script src="../../static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script>
-    <!-- 导入腾讯地图 -->
     <script>
         lay('#version').html('-v' + laydate.v);
 
@@ -220,7 +219,7 @@
                     <figure class="hotel_figure">
                         <img src="../../static/images/hotel/3star_hotel/1fulixierdun/11.jpg" alt="The Pulpit Rock" class="hotel_img">
                         <span class="hotel_name">富力希尔顿</span>酒店 星级酒店
-                        <a href="./hotel_ticket.html">点击进入</a>
+                        <a href="http://localhost:8000/hotel/31">点击进入</a>
                     </figure>
                     <figure class="hotel_figure">
                         <img src="../../static/images/hotel/1quick_hotel/3jingjiangzhixing/11.jpg" alt="The Pulpit Rock" class="hotel_img"><span
@@ -245,6 +244,11 @@
                     <figure class="hotel_figure">
                         <img src="../../static/images/hotel/4theme_hotel/5tianerlianqingzhutijiudian/11.png" alt="The Pulpit Rock" class="hotel_img">
                         <span class="hotel_name">天鹅恋情</span>酒店 主题酒店
+                        <a href="">点击进入</a>
+                    </figure>
+                    <figure class="hotel_figure">
+                        <img src="../../static/images/hotel/3star_hotel/3xian_w_jiudian/11.jpg" alt="The Pulpit Rock" class="hotel_img">
+                        <span class="hotel_name">西安W</span>酒店 星级酒店
                         <a href="">点击进入</a>
                     </figure>
                 </div>
@@ -349,7 +353,7 @@
         </div>
         <div class="bottom">
             <p>Copyright ©LT 乐途旅行网 | 陕ICP备120110109号 | 旅行网经营许可证： L-LT-BK12345</p>
-            <img src="../img/booking/pic.gif" title="站长统计">
+            <img src="../../static/images/hotel/pic.gif" title="站长统计">
         </div>
     </footer>
 </body>
