--- a/Travel/templates/about/about.html
+++ b/Travel/templates/about/about.html
@@ -147,11 +147,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="/about/travelContract">旅游合同签订方式？</a></p>
-                <p><a href="/about/childPrice">儿童价是基于什么制定的？</a></p>
-                <p><a href="/about/touristRoute">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="/about/singleRoom">单房差是什么？</a></p>
-                <p><a href="/about/travelInsuranceCategory">旅游保险有那些种类？</a></p>
+                <p><a href="./travelContract.html">旅游合同签订方式？</a></p>
+                <p><a href="./childPrice.html">儿童价是基于什么制定的？</a></p>
+                <p><a href="./touristRoute.html">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="./singleRoom.html">单房差是什么？</a></p>
+                <p><a href="./travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
