--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -54,10 +54,10 @@
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
                     <li class="active"><a href="javascript:void(0)">首页</a></li>
-                    <li><a href="html/information.html">景点门票</a></li>
-                    <li><a href="html/order.html">交通出行</a></li>
-                    <li><a href="html/order_hotel.html">酒店预定</a></li>
-                    <li><a href="html/about.html">关于我们</a></li>
+                    <li><a href="/scenic">景点门票</a></li>
+                    <li><a href="/trip">交通出行</a></li>
+                    <li><a href="/hotel">酒店预定</a></li>
+                    <li><a href="/about">关于我们</a></li>
                 </ul>
             </nav>
         </div>
@@ -121,7 +121,7 @@
                 <img src="../static/images/home/tour2.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;骊山 &gt;</strong>
-                骊山位于陕西省西安市临潼区城南,因景色翠秀，美如锦绣，故又名“绣岭”。每当夕阳西下，骊山辉映在金色的晚霞之中，景色格外绮丽，有“骊山晚照”之美誉。</figcaption>
+                骊山位于陕西省西安市临潼区城南./about/travelContract,因景色翠秀，美如锦绣，故又名“绣岭”。每当夕阳西下，骊山辉映在金色的晚霞之中，景色格外绮丽，有“骊山晚照”之美誉。</figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
@@ -229,11 +229,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="../travel/html/travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="../travel/html/childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="../travel/html/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="../travel/html/singleRoom.html">单房差是什么？</a></p>
-                <p><a href="../travel/html/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="about/travelContract.html">旅游合同签订方式？</a></p>
+                <p><a href="about/childPrice.html">儿童价是基于什么制定的？</a></p>
+                <p><a href="about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="about/singleRoom.html">单房差是什么？</a></p>
+                <p><a href="about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
@@ -247,7 +247,7 @@
         </div>
         <div class="bottom">
             <p>Copyright ©LT 乐途旅行网 | 陕ICP备120110109号 | 旅行网经营许可证： L-LT-BK12345</p>
-            <img src="./img/booking/pic.gif" title="站长统计">
+            <img src="/static/images/home/pic.gif" title="站长统计">
         </div>
     </footer>
 </body>
