--- a/Travel/templates/scenic/information02.html
+++ b/Travel/templates/scenic/information02.html
@@ -21,7 +21,7 @@
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
                     <li><a href="../index.html">首页</a></li>
-                    <li class="active"><a href="{% url 'scenic1' %}">景点门票</a></li>
+                    <li class="active"><a href="/scenic">景点门票</a></li>
                     <li><a href="../html/order.html">交通出行</a></li>
                     <li><a href="../html/order_hotel.html">酒店预定</a></li>
                     <li><a href="../html/about.html">关于我们</a></li>
