--- a/Travel/templates/scenic/ticket.html
+++ b/Travel/templates/scenic/ticket.html
@@ -114,7 +114,7 @@
             <!--顶部工具栏-->
             <div class="type">
                 <div class=gper>门票种类</div>
-                <div class="gname">景点名称</div>
+                <div class="gname">门票名称</div>
                 <div class=gpt>提前预定时间</div>
                 <div class="gprice">单价（元）</div>
                 <div class="gcount">数量</div>
