--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -120,8 +120,11 @@
             <a href="">
                 <img src="../static/images/home/tour2.jpg" alt="热门旅游">
             </a>
-            <figcaption><strong class="title">&lt;骊山 &gt;</strong>
-                骊山位于陕西省西安市临潼区城南./about/travelContract,因景色翠秀，美如锦绣，故又名“绣岭”。每当夕阳西下，骊山辉映在金色的晚霞之中，景色格外绮丽，有“骊山晚照”之美誉。</figcaption>
+            <figcaption><strong class="title">&lt;大唐芙蓉园&gt;</strong>
+                大唐芙蓉园位于陕西省西安市城南的曲江开发区，大雁塔东南侧，它是在原唐代芙蓉园遗址以北，
+                仿照唐代皇家园林式样重新建造的，是中国第一个全方位展示盛唐风貌的大型皇家园林式文化主题公园，
+                占地面积1000亩，其中水域面积300亩。
+            </figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
@@ -132,8 +135,9 @@
             <a href="">
                 <img src="../static/images/home/tour3.jpg" alt="热门旅游">
             </a>
-            <figcaption><strong class="title">&lt;大明宫 &gt;</strong> 大明宫，大唐帝国的大朝正宫，唐朝的政治中心和国家象征
-                。始建于唐太宗贞观八年（634年），原名永安宫，是唐长安城三座主要宫殿“三大内”（大明宫、太极宫、兴庆宫）中规模最大的一座，称为“东内”。</figcaption>
+            <figcaption><strong class="title">&lt;大明宫 &gt;</strong> 大明宫，大唐帝国的大朝正宫，唐朝的政治中心和
+                国家象征 。始建于唐太宗贞观八年（634年），原名永安宫，是唐长安城三座主要宫殿“三大内”（大明宫、太极宫、
+                兴庆宫）中规模最大的一座，称为“东内”。</figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
@@ -145,7 +149,9 @@
                 <img src="../static/images/home/tour4.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;乐华欢乐世界&gt;</strong>
-                乐华欢乐世界是亚洲超大主题乐园，为国家AAAA级旅游景区,园区有欢乐广场、月光湖、巨石山脉、繁星林地、回音山谷、熊猫农场6大主题区域，拥有8台不同类型的主题过山车及翻江倒海、高空飞翔、星际飞艇、雷神之锤等33组动感刺激的游乐设备。
+                乐华欢乐世界是亚洲超大主题乐园，为国家AAAA级旅游景区,园区有欢乐广场、月光湖、巨石山脉、繁星林地、
+                回音山谷、熊猫农场6大主题区域，拥有8台不同类型的主题过山车及翻江倒海、高空飞翔、星际飞艇、雷神之锤等
+                33组动感刺激的游乐设备。
             </figcaption>
             <div>
                 <em class="sat">满意度77%</em>
@@ -159,7 +165,8 @@
                 <img src="../static/images/home/tour5.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;唐华清宫&gt;</strong>
-                唐华清宫，是唐代封建帝王游幸的别宫。后也称“华清池”，位于陕西省西安市临潼区。包括原骊山国家森林公园，与颐和园、圆明园、承德避暑山庄并称为中国四大皇家园林。</figcaption>
+                唐华清宫，是唐代封建帝王游幸的别宫。后也称“华清池”，位于陕西省西安市临潼区。包括原骊山国家森林公园，
+                与颐和园、圆明园、承德避暑山庄并称为中国四大皇家园林。</figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
@@ -170,7 +177,9 @@
             <a href="../travel/html/ticket.html">
                 <img src="../static/images/home/tour6.jpg" alt="热门旅游">
             </a>
-            <figcaption><strong class="title">&lt;西安秦岭野生动物园&gt;</strong> 西北首家野生动物园，有兽类、鸟类、两栖类和爬行类动物，其庞大的动物种群、数量都是西北之最。
+            <figcaption><strong class="title">&lt;西安秦岭野生动物园&gt;</strong>
+                西北首家野生动物园，有兽类、鸟类、两栖类
+                和爬行类动物，其庞大的动物种群、数量都是西北之最。
             </figcaption>
             <div>
                 <em class="sat">满意度77%</em>
@@ -183,7 +192,8 @@
                 <img src="../static/images/home/tour7.jpg" alt="热门旅游">
             </a>
             <figcaption><strong class="title">&lt;长恨歌&gt;</strong>
-                中国首部大型实景历史舞剧，以白居易传世名篇《长恨歌》为蓝本，将历史故事与实景演出相结合，重现1300多年前华清宫里那段感人肺腑的李杨爱情故事。</figcaption>
+                中国首部大型实景历史舞剧，以白居易传世名篇《长恨歌》为蓝本，将历史故事与实景演出相结合，重现1300多年前华清宫
+                里那段感人肺腑的李杨爱情故事。</figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
@@ -195,25 +205,28 @@
                 <img src="../static/images/home/tour8.jpg" alt="热门旅游">
             </a>
             <figcaption><strong
-                    class="title">&lt;回民街&gt;</strong>西安回民街是西安著名的美食文化街区，是西安小吃街区。西安风情的代表之一，是回民街区多条街道的统称，由北广济街、北院门、西羊市、大皮院、化觉巷、洒金桥等数条街道组成，在钟鼓楼后。
+                    class="title">&lt;回民街&gt;</strong>西安回民街是西安著名的美食文化街区，是西安小吃街区。西安风情的
+                代表之一，是回民街区多条街道的统称，由北广济街、北院门、西羊市、大皮院、化觉巷、洒金桥等数条街道组成，
+                在钟鼓楼后。
             </figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
             </div>
-            <div class="type">西安美食</div>
+            <div class="type">西安名景</div>
         </figure>
         <figure>
             <a href="">
                 <img src="../static/images/home/tour9.jpg" alt="热门旅游">
             </a>
-            <figcaption><strong class="title">&lt;VR虚拟现实体验馆&gt;</strong> 拟真CS类VR对战射击游戏，拥有真正的身临其境之感。雁塔区长安中路215号小寨西旅国际中心
+            <figcaption><strong class="title">&lt;骊山&gt;</strong> 骊山位于陕西省西安市临潼区城南,因景色翠秀，
+                美如锦绣，故又名“绣岭”。每当夕阳西下，骊山辉映在金色的晚霞之中，景色格外绮丽，有“骊山晚照”之美誉。
             </figcaption>
             <div>
                 <em class="sat">满意度77%</em>
                 <span class="price">￥<strong>2864</strong>起</span>
             </div>
-            <div class="type">VR体验</div>
+            <div class="type">西安名景</div>
         </figure>
     </div>
     <footer id="footer">
