--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -125,10 +125,10 @@
         </aside>
         <div class="list order">
             <div class="form">
-                <h2>机票预订</h2>
+                <h2>高铁预订</h2>
                 <p>
                     <ul class="infor">
-                        <li>航程类型</li>
+                        <li>车票类型</li>
                         <li><a href="###">单程</a></li>
                         <li><a href="###">往返</a></li>
 
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="new">
-                <h2>最新机票</h2>
+                <h2>最新车票</h2>
                 <ul>
                     <li>热门城市：</li>
                     <li>北京</li>
