--- a/Travel/templates/user/cart.html
+++ b/Travel/templates/user/cart.html
@@ -41,7 +41,7 @@
         </div>   
     </header>
     <div id="main">
-        <!--购物车顶部标签-->
+        <!--购物车顶部-->
         <h2>
             购物车
         </h2>
