--- a/Travel/templates/hotel/hotel_ticket.html
+++ b/Travel/templates/hotel/hotel_ticket.html
@@ -24,25 +24,25 @@
                 <div id="cart"><a href="">我的订单</a></div>
             </b>
             <b>
-                <div id="register"><a href="../travel/html/register.html">免费注册</a></div>
+                <div id="register"><a href="../user/register.html">免费注册</a></div>
             </b>
             <b>
-                <div id="login"><a href="../travel/html/login.html">您好,请登录</a></div>
+                <div id="login"><a href="../user/login.html">您好,请登录</a></div>
             </b>
         </div>
         <div class="center">
             <h1 class="logo">
-                <a href="index.html" id="logoA">乐途旅行网</a>
+                <a href="../index.html" id="logoA">乐途旅行网</a>
             </h1>
 
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
                     <li><a href="../index.html">首页</a></li>
-                    <li><a href="information.html">景点门票</a></li>
-                    <li><a href="order.html">交通出行</a></li>
+                    <li><a href="../scenic/information.html">景点门票</a></li>
+                    <li><a href="../about/order.html">交通出行</a></li>
                     <li class="active"><a href="order_hotel.html">酒店预定</a></li>
-                    <li><a href="about.html">关于我们</a></li>
+                    <li><a href="../about/about.html">关于我们</a></li>
                 </ul>
             </nav>
         </div>
@@ -99,7 +99,7 @@
     <div id="bodytickrt">
         <div class=daohang style="background:orange;">
             <a href="##">房间订购</a>
-            <a href="information.html">周围景点</a>
+            <a href="../scenic/information.html">周围景点</a>
         </div>
 
         <div class=count>
