--- a/Travel/templates/hotel/order_hotel.html
+++ b/Travel/templates/hotel/order_hotel.html
@@ -33,10 +33,10 @@
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
                     <li><a href="../index.html">首页</a></li>
-                    <li><a href="./information.html">景点门票</a></li>
+                    <li><a href="../scenic/information.html">景点门票</a></li>
                     <li><a href="./order.html">交通出行</a></li>
                     <li class="active"><a href="./order_hotel.html">酒店预定</a></li>
-                    <li><a href="./about.html">关于我们</a></li>
+                    <li><a href="../about/about.html">关于我们</a></li>
                 </ul>
             </nav>
 
@@ -335,11 +335,11 @@
             <div class="block center">
                 <h2>旅游 FAQ</h2>
                 <hr>
-                <p><a href="travelContract.html">旅游合同签订方式？</a></p>
-                <p><a href="childPrice.html">儿童价是基于什么制定的？</a></p>
-                <p><a href="touristRoute.html">旅游的线路品质怎么界定的？</a></p>
-                <p><a href="singleRoom.html">单房差是什么？</a></p>
-                <p><a href="travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
+                <p><a href="../about/travelContract.html">旅游合同签订方式？</a></p>
+                <p><a href="../about/childPrice.html">儿童价是基于什么制定的？</a></p>
+                <p><a href="../about/touristRoute.html">旅游的线路品质怎么界定的？</a></p>
+                <p><a href="../about/singleRoom.html">单房差是什么？</a></p>
+                <p><a href="../about/travelInsuranceCategory.html">旅游保险有那些种类？</a></p>
             </div>
             <div class="block right">
                 <h2>联系方式</h2>
