--- a/Travel/templates/user/login.html
+++ b/Travel/templates/user/login.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div id="top">
-        <a href="../index.html">
+        <a href="index">
             <img src="/static/images/user/logo.png" alt="logo">
         </a>
         <span>欢迎登录</span>
-        <a href="../index.html"><span class="s1">返回首页</span></a>
+        <a href="index"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
         <form action="" method="post">
             <div class="content">
                 <p>
                     登录
-                    <a href="register.html">新用户注册</a>
+                    <a href="register">新用户注册</a>
                 </p>
                 <div class="text">
                     <input type="text" name="uname" placeholder="请输入用户名(5~15个字母或数字)" minlength="5" maxlength="15">
@@ -44,7 +44,7 @@
         </form>
     </div>
     <div id="bottom">
-        <a href="../index.html">
+        <a href="index">
             <img src="/static/images/user/logo.png" alt="logo" id="logoImg">
         </a>
         <p>
