--- a/Travel/templates/user/register.html
+++ b/Travel/templates/user/register.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div id="top">
-        <a href="../index.html">
+        <a href="index">
             <img src="/static/images/user/logo.png" alt="logo">
         </a>
         <span>免费注册</span>
-        <a href="../index.html"><span class="s1">返回首页</span></a>
+        <a href="index"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
         <form action="/index" method="post">
             <div class="content">
                 <p>
                     注册
-                    <a href="./login.html">返回登录</a>
+                    <a href="login">返回登录</a>
                 </p>
                 <div class="text">
                     <input type="text" name="uname" placeholder="请输入用户名(5~15个字母或数字)" maxlength="15" minlength="5">
@@ -42,7 +42,7 @@
         </form>
     </div>
     <div id="bottom">
-        <a href="../index.html">
+        <a href="index">
             <img src="/static/images/user/logo.png" alt="logo" id="logoImg">
         </a>
         <p>
